--- a/WebApplication1/Views/Post/Manage_Participants.cshtml
+++ b/WebApplication1/Views/Post/Manage_Participants.cshtml
@@ -13,7 +13,10 @@
 
 
 <div class="content">
-  <p>Status : @ViewBag.post.Status</p>
+  <p class="status-post">Status :</p>
+  <p class="status-post @(ViewBag.post.Status == "Open" ? "status-open" : "status-closed")">
+       @ViewBag.post.Status
+  </p>
   @if(ViewBag.post.Status == "Open"){
     <form asp-controller="Post" asp-action="Close_Status" method="post">
         <input type="hidden" name="id" value="@ViewBag.post.ID" />
