--- a/WebApplication1/Views/Profile/Index.cshtml
+++ b/WebApplication1/Views/Profile/Index.cshtml
@@ -7,7 +7,7 @@
 }
 <div class="profile-container">
     <div class="profile-display">
-        <img src="~/img/avartar2.png" alt="Profile Avatar">
+        <img src="@Model.User_Image_Url" alt="Profile Avatar">
         <div class="field">
             <span class="label">Name:</span> <span class="value">@Model.UserName</span>
         </div>
