--- a/WebApplication1/Views/Profile/EditProfile.cshtml
+++ b/WebApplication1/Views/Profile/EditProfile.cshtml
@@ -7,8 +7,13 @@
 }
 <div class="profile-container">
     <div class="profile-edit">
-        <img src="~/img/avartar1.png" alt="Profile Avatar">
+        <img src="@Model.User_Image_Url" alt="Profile Avatar">
         <form asp-action="EditProfile" asp-controller="Profile" method="post">
+            <div class="field">
+                <label>Image Url:</label>
+                <input type="text" asp-for="User_Image_Url" required>
+                <span asp-validation-for="User_Image_Url" class="text-danger"></span>
+            </div>
             <div class="field">
                 <label>Name:</label>
                 <input type="text" asp-for="UserName" required>
