--- a/WebApplication1/wwwroot/css/card-pop.css
+++ b/WebApplication1/wwwroot/css/card-pop.css
@@ -10,6 +10,8 @@
     height: 150px; 
     max-height: 600px; 
     object-fit: cover; 
+    border-radius: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 .content {
     display: flex;
