--- a/WebApplication1/Views/Post/Manage_Participants.cshtml
+++ b/WebApplication1/Views/Post/Manage_Participants.cshtml
@@ -39,7 +39,7 @@
      {
         @if(joinEvent.Status == "Approve"){          
           <div class="card">
-            <img src="https://via.placeholder.com/150" alt="User Avatar">
+            <img src="@(ViewBag.user_Image_Url.ContainsKey(joinEvent.UserID) ? ViewBag.user_Image_Url[joinEvent.UserID] : "/path/to/default-avatar.png")" alt="User Avatar">
             <h3>@(ViewBag.Usernames.ContainsKey(joinEvent.UserID) ? ViewBag.Usernames[joinEvent.UserID] : "Unknown User")</h3>
             @if(ViewBag.userId != joinEvent.UserID){
                 <p>Status: @joinEvent.Status</p>
@@ -67,7 +67,7 @@
         
         @if(joinEvent.Status == "Request"){          
           <div class="card">
-            <img src="https://via.placeholder.com/150" alt="User Avatar">
+            <img src="@(ViewBag.user_Image_Url.ContainsKey(joinEvent.UserID) ? ViewBag.user_Image_Url[joinEvent.UserID] : "/path/to/default-avatar.png")" alt="User Avatar">
             <h3>@(ViewBag.Usernames.ContainsKey(joinEvent.UserID) ? ViewBag.Usernames[joinEvent.UserID] : "Unknown User")</h3>
             <p>Status: @joinEvent.Status</p>
             <form asp-controller="Post" asp-action="Approve" method="post">
