--- a/WebApplication1/Views/Post/Manage_Participants.cshtml
+++ b/WebApplication1/Views/Post/Manage_Participants.cshtml
@@ -11,8 +11,7 @@
 <h2>In Party </h2>
 </div>
 
-
-<div class="content">
+<div class="status-sone">
   <p class="status-post">Status :</p>
   <p class="status-post @(ViewBag.post.Status == "Open" ? "status-open" : "status-closed")">
        @ViewBag.post.Status
@@ -28,9 +27,6 @@
         <button type="submit" class="approve-btn">Open</button>
     </form>
   }
-</div>
-
-<div class="content">
 </div>
 
 <div class="content">
