--- a/WebApplication1/wwwroot/css/card-pop.css
+++ b/WebApplication1/wwwroot/css/card-pop.css
@@ -10,6 +10,8 @@
     height: 150px; 
     max-height: 600px; 
     object-fit: cover; 
+    border-radius: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 .content {
     display: flex;
@@ -39,8 +41,8 @@
     border-radius: 30px;
     padding: 10px;
     text-align: center;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add shadow behind the card */
-    background-color: #fff;  /* #bec9e7 #6373b7 #ebe4f2*/
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    background-color: #fff;
     transition: transform 0.3s, box-shadow 0.3s;
 }
 
@@ -166,6 +168,10 @@ a.card-link {
     flex-direction: row;
     align-items: flex-end;
     gap: 10Px;
+}
+.buttnozone form{
+    margin-left: 80%;
+    width: 55px;
 }
 .view-button {
     width: 90%;
