--- a/WebApplication1/Views/Community/Index.cshtml
+++ b/WebApplication1/Views/Community/Index.cshtml
@@ -2,6 +2,9 @@
 
 @section Styles {
     <link rel="stylesheet" href="~/css/card-pop.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
 }
 
 @{
@@ -136,7 +139,7 @@
                     <p>Date : @post.Date</p>
                     <p>Amount : @post.Participants / @post.Capacity</p>
                 </a>
-                <a class="button" href="#popup-@post.ID">View Pop up</a>
+                <a class="button" href="#popup-@post.ID">View more</a>
             </div>
             
             <div id="popup-@post.ID" class="overlay">
