--- a/WebApplication1/Views/Profile/EditProfile.cshtml
+++ b/WebApplication1/Views/Profile/EditProfile.cshtml
@@ -4,6 +4,9 @@
 }
 @section Styles {
     <link rel="stylesheet" href="~/css/Profile.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
 }
 <div class="profile-container">
     <div class="profile-edit">
