--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -3,13 +3,15 @@
 @section Styles {
     <link rel="stylesheet" href="~/css/card-pop.css" />
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
 }
 
 @{
     var Id = ViewBag.Id;
     var userStatus = ViewBag.UserStatus;
 }
-
 @section Scripts {
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
@@ -115,7 +117,7 @@
                 <p>Date : @post.Date</p>
                 <p>Amount : @post.Participants / @post.Capacity</p>
             </a>
-            <a class="button" href="#popup-@post.ID">Let me Pop up</a>
+            <a class="button" href="#popup-@post.ID">View more</a>
         </div>
 
         <!-- Popup content -->
