--- a/WebApplication1/Views/Post/Edit.cshtml
+++ b/WebApplication1/Views/Post/Edit.cshtml
@@ -1,6 +1,9 @@
 @model WebApplication1.Models.Post
 
 <link rel="stylesheet" href="~/css/edit-post.css">
+<link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mukta:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
 
 <div class="form-container">
     <div class="form-card">
@@ -45,3 +48,4 @@
         </form>
     </div>
 </div>
+
