--- a/WebApplication1/wwwroot/css/cardpost.css
+++ b/WebApplication1/wwwroot/css/cardpost.css
@@ -18,18 +18,21 @@
 }
 
 .button-createpost {
-    padding: 10px 20px;
-
-    background-color: white;
-    color: rgb(0, 0, 0);
-
-    text-decoration: none;
-    border-radius: 5px;
-    transition: background-color 0.3s ease, color 0.3s ease;
+    width: 100%;
+    display: block; 
+    text-align: center; 
+    padding: 8px 12px; 
+    margin: 4px 0; 
+    background-color: #6373b7; 
+    color: white; 
+    text-decoration: none; 
+    border-radius: 4px; 
+    transition: background-color 0.3s ease, color 0.3s ease; 
 }
 
 .button-createpost:hover {
-    background-color: #bcc5e4;
+    background-color: #ebe4f2;
+    color: #000 /* เปลี่ยนสีข้อความเมื่อ hover */
 }
 .card {
     width: 80%;
@@ -42,7 +45,8 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    background-color: #bcc5e4;
+    background-color: white;
+    font-family: "Mukta", sans-serif; /* ใช้ Mukta ใน card */
 }
 
 .close-button {
@@ -59,6 +63,7 @@
     height: 30px;
     text-align: center;
     line-height: 30px;
+    font-family: "Mukta", sans-serif;
 }
 
 .buttnozone {
@@ -92,6 +97,7 @@
 }
 
 .card-content {
+    border: 5px solid #6373b7;
     display: flex;
     padding: 10px;
     position: relative;
@@ -117,8 +123,8 @@
     display: flex;
     flex-direction: column;
     padding: 10px;
-    border-top: 1px solid #ccc;
-    border-bottom: 1px solid #ccc;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
     background-color: #f9f9f9;
     max-height: 100px;
     overflow-y: scroll;
@@ -129,6 +135,7 @@
     align-items: flex-start;
     flex-wrap: wrap;
     margin-bottom: 8px;
+    font-family: "Mukta", sans-serif;
 }
 
 .comment-user {
@@ -146,6 +153,8 @@
     align-items: center;
     padding: 10px;
     border-top: 1px solid #ccc;
+    font-family: "Mukta", sans-serif;
+    
 }
 .card-comment form{
     padding-left: 2%;
@@ -180,4 +189,14 @@
     .content{
         margin-left: auto;
     }
+}
+
+.mukta-light {
+    font-family: "Mukta", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+}
+
+body, h1, h2, h3, p {
+    font-family: "Mukta", sans-serif; /* ใช้ Mukta สำหรับทั้งเอกสาร */
 }
