--- a/WebApplication1/wwwroot/css/edit-post.css
+++ b/WebApplication1/wwwroot/css/edit-post.css
@@ -17,6 +17,7 @@
     max-width: 600px;
     width: 100%;
     font-family: "Mukta", sans-serif; /* ใช้ Mukta สำหรับการ์ดทั้งหมด */
+    margin: 80px 0;
 }
 
 /* สไตล์ปุ่ม */
@@ -70,7 +71,7 @@
 }
 
 .text-danger {
-    color: red;
+    color: red; 
 }
 
 /* ใช้ Mukta สำหรับทั้งเอกสาร */
