--- a/WebApplication1/wwwroot/css/card-Approve.css
+++ b/WebApplication1/wwwroot/css/card-Approve.css
@@ -3,6 +3,7 @@
     justify-content: flex-start;
     flex-wrap: wrap;
     margin-left: 100px;
+    margin-right: 100px;
     padding: 20px;
     margin-top: 40px;
     gap: 20px;
@@ -12,16 +13,18 @@
 .status-sone{ 
     display: flex;
     justify-content: flex-start;
+    
+    margin: auto;
     margin-left: 100px;
     padding: 20px;
-    margin-bottom: 7%;
+    margin-bottom: 50px;
 }
 .request01{
     background-color: #6373b7;
     color: #fff;
     text-align: center;
     padding: 30px;
-    margin-left: 110px;
+    margin: auto;
     margin-top: 60px;
     width: 90%;
     border-radius: 30px;
@@ -45,7 +48,7 @@
     border: 3px solid #6373b7;
     border-radius: 30px;
     padding: 10px;
-    margin-top: -120px;
+    margin-top: 0px;
     text-align: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add shadow behind the card */
     background-color: #fff; 
