--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
             @if (ViewBag.userStatus == null){
                 <div class="dropdown">
                     <a class="dropbtn user-btn" asp-controller="Login" asp-action="Index">Login</a>
-                    <button class="dropbtn icon-btn"><i class="fa-solid fa-key"></i></button>
+                    <a class="dropbtn icon-btn" asp-controller="Login" asp-action="Index"><i class="fa-solid fa-key"></i></a>
                 </div>
             }
             else{
@@ -40,7 +40,7 @@
                 </button>
                 <button class="dropbtn icon-btn">
                     <i class="fa-solid fa-user"></i>
-                    </button>
+                </button>
                 <div class="dropdown-content">
                     <a asp-controller="Profile" asp-action="Index">Profile</a>
                     <a asp-controller="Login" asp-action="Logout">Logout</a>
